--- a/i18n/de.po
+++ b/i18n/de.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 8.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-01-17 01:45+0000\n"
-"PO-Revision-Date: 2015-01-17 01:45+0000\n"
+"POT-Creation-Date: 2015-02-25 11:45+0000\n"
+"PO-Revision-Date: 2015-02-25 11:45+0000\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -21,34 +21,34 @@ msgstr ""
 #: view:product.brand:product_brand.product_template_kanban_view_brand
 #: field:product.template,product_brand_id:0
 msgid "Brand"
-msgstr "品牌"
+msgstr "Marke"
 
 #. module: product_brand
 #: view:product.brand:product_brand.view_product_brand_form
 #: field:product.brand,name:0
 msgid "Brand Name"
-msgstr "品牌名称"
+msgstr "Marken Name"
 
 #. module: product_brand
 #: model:ir.ui.menu,name:product_brand.menu_product_brand
 msgid "Brand management"
-msgstr "品牌管理"
+msgstr "Marken Verwaltung"
 
 #. module: product_brand
 #: field:product.brand,create_uid:0
 msgid "Created by"
-msgstr "创建人"
+msgstr "Erstellt von"
 
 #. module: product_brand
 #: field:product.brand,create_date:0
 msgid "Created on"
-msgstr "创建时间"
+msgstr "Erstellt am"
 
 #. module: product_brand
 #: view:product.brand:product_brand.view_product_brand_form
 #: field:product.brand,description:0
 msgid "Description"
-msgstr "描述"
+msgstr "Beschreibung"
 
 #. module: product_brand
 #: field:product.brand,id:0
@@ -58,33 +58,33 @@ msgstr "ID"
 #. module: product_brand
 #: field:product.brand,write_uid:0
 msgid "Last Updated by"
-msgstr "修改人"
+msgstr "Zuletzt geändert von"
 
 #. module: product_brand
 #: field:product.brand,write_date:0
 msgid "Last Updated on"
-msgstr "修改时间"
+msgstr "Zuletzt geändert am"
 
 #. module: product_brand
 #: field:product.brand,logo:0
 msgid "Logo File"
-msgstr "Logo图片"
+msgstr "Logo File"
 
 #. module: product_brand
 #: field:product.brand,partner_id:0
 msgid "Partner"
-msgstr "合作伙伴"
+msgstr "Partner"
 
 #. module: product_brand
 #: view:product.brand:product_brand.product_brand_search_form_view
 #: view:product.brand:product_brand.view_product_brand_form
 msgid "Product Brand"
-msgstr "产品品牌"
+msgstr "Produkt Marke"
 
 #. module: product_brand
 #: model:ir.model,name:product_brand.model_product_brand
 msgid "Product Brands"
-msgstr "产品品牌"
+msgstr "Produkt Marken"
 
 #. module: product_brand
 #: model:ir.model,name:product_brand.model_product_template
@@ -94,15 +94,15 @@ msgstr "Product Template"
 #. module: product_brand
 #: help:product.template,product_brand_id:0
 msgid "Select a brand for this product."
-msgstr "选择产品品牌"
+msgstr "Wählen sie eine Marke für dieses Produkt"
 
 #. module: product_brand
 #: help:product.brand,partner_id:0
 msgid "Select a partner for this brand if it exists."
-msgstr "如果存在，选择此品牌的持有者。"
+msgstr "Wählen sie einen Partner, wenn ein Solcher für die Marke existiert。"
 
 #. module: product_brand
 #: view:product.brand:product_brand.view_product_brand_tree
 msgid "product.brand"
-msgstr "品牌列表"
+msgstr "product.brand"
 
